# cs229_project

./: README.md  current.py  main.py  one_shot.py  pyproject.toml  result.py  run_img2img.py  step_ablation_with_stopcriteria.py  sweep.py  test.py  test_base_model.py  test_cls.py  test_lora.py  v3.py
src/data_pipeline/: generate_training_data.py
src/evals/: evaluate_models.py  plot_loss.py
src/ilvr/: callback.py  config.py  encoding.py  filters.py  pipeline.py
src/img2img/: __init__.py  callback.py  config.py  encoding.py  filters.py  pipeline.py  preprocessing.py  visualization.py
src/training_pipeline/: train.py
src/utils/: resizer.py
src/vae/: __init__.py  vae.py
test_cls_results/: cls_embedding.pt
training_data/: split_info.json
