[project]
name = "cs229-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "diffusers>=0.25.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
    "peft>=0.7.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.10.7",
    "scikit-image>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/img2img", "src/ilvr", "src/utils", "src/vae"]
